Fixed spacing and media queries of CourseOverviewItems

--- a/src/Components/Pages/Courses/CourseOverview/CourseOverview.module.css
+++ b/src/Components/Pages/Courses/CourseOverview/CourseOverview.module.css
@@ -11,11 +11,11 @@
 
 .overviewHeadline {
   font-family: "Gill Sans", "Gill Sans MT", Calibri, "Trebuchet MS", sans-serif;
-  margin-left: 10vw;
+  margin-left: 20vw;
   font-size: clamp(1.8em, 5vw + 1.7em, 3em);
 }
 
-@media (max-width: 940px) {
+@media (max-width: 1070px) {
   .overviewHeadline {
     margin-left: 0;
     font-size: clamp(1.8em, 5vw + 1.2em, 3em);
