--- a/src/Components/Pages/Courses/CourseOverview/CourseOverviewItem.module.css
+++ b/src/Components/Pages/Courses/CourseOverview/CourseOverviewItem.module.css
@@ -1,4 +1,4 @@
-@import "src/vars.css";
+@import "@/vars.css";
 
 .itemContainer {
   display: flex;
@@ -8,7 +8,7 @@
   min-width: 5em;
   max-height: 30rem;
   margin-top: 3rem;
-  margin-left: 10vw;
+  margin-left: 20vw;
 }
 
 /* .itemContainer:after {
@@ -23,7 +23,7 @@
 } */
 
 .itemContainer[data-index="1"] {
-  margin-left: calc(var(--itemHeight) + 10vw);
+  margin-left: calc(var(--itemHeight) + 20vw);
 }
 
 .imageContainer {
@@ -51,7 +51,7 @@
 
 .itemHeadline {
   font-family: "Gill Sans", "Gill Sans MT", Calibri, "Trebuchet MS", sans-serif;
-  font-size: clamp(1.5em, 2vw, 2em);
+  font-size: clamp(1.3em, 2vw, 2em);
   margin-top: 0;
   margin-left: 1rem;
 }
@@ -66,7 +66,7 @@
   max-width: 20rem;
 }
 
-@media (max-width: 940px) {
+@media (max-width: 1070px) {
   .itemContainer {
     max-height: 10rem;
     margin-left: 0;
